# ground-texture-slam

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  run_datasets_HD-Ground.py
.devcontainer/: Dockerfile  devcontainer.json
include/ground_texture_slam/: BagOfWords.h  GroundTextureSLAM.h  ImageParser.h  KeypointMatcher.h  TransformEstimator.h
include/ground_texture_slam_new/: BagOfWords.h  GroundTextureSLAM.h  ImageParser.h  KeypointMatcher.h  TransformEstimator.h
src/: brick-V2_loopclosing.txt  simple_example.cpp  simple_example.py  time_statistics.txt
src/ground_texture_slam/: BagOfWords.cpp  GroundTextureSLAM.cpp  ImageParser.cpp  KeypointMatcher.cpp  TransformEstimator.cpp  python_bindings.cpp
src/ground_texture_slam_new/: BagOfWords.cpp  GroundTextureSLAM.cpp  ImageParser.cpp  KeypointMatcher.cpp  TransformEstimator.cpp  python_bindings.cpp
src/results/results_2023-03-10/: brick-V1.txt  brick-V2.txt  brick-V3.txt  carpet1-V1.txt  carpet1-V2.txt  carpet1-V3.txt  carpet2-V2.txt  carpet3-V1.txt  carpet3-V2.txt  carpet3-V3.txt  coarse-asphalt-V1.txt  concrete-V1.txt  concrete-V2.txt  fine-asphalt-V1.txt  fine-asphalt-V2.txt  fine-asphalt-V3.txt  fine-asphalt-V4.txt  granite-tiles-V1.txt  granite-tiles-V2.txt  gravel-road1-V1.txt  gravel-road2-V1.txt
test/: testBagOfWords.cpp  testGroundTextureSLAM.cpp  testImageParser.cpp  testKeypointMatcher.cpp  testTransformEstimator.cpp
